# physics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/include/: Physics.hpp
core/include/Physics/Graphics/: Drawable.hpp  RectangleShape.hpp  Vertex.hpp
core/include/Physics/Math/: Body.hpp  CircleCollider.hpp  Collider.hpp  Collision.hpp  Color.hpp  Functions.hpp  Matrix.hpp  RectangleCollider.hpp  RigidBody.hpp  StaticBody.hpp  Vector2.hpp
core/include/Physics/SFML/: Application.hpp  Convert.hpp  Window.hpp
core/include/Physics/System/: Application.hpp  GameState.hpp  Window.hpp
core/src/Math/: CircleCollider.cpp  Collider.cpp  Collision.cpp  Color.cpp  RectangleCollider.cpp
demo/: main.cpp
